crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__phi-type-inference-array-push-consecutive-phis.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/phi-type-inference-array-push-consecutive-phis.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
import { makeArray } from "shared-runtime";
function Component(props) {
	const $ = _c(6);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let t1;
	if ($[1] !== props.cond || $[2] !== props.cond2 || $[3] !== props.value || $[4] !== props.value2) {
		let y;
		if (props.cond) {
			if (props.cond2) {
				y = [props.value];
			} else {
				y = [props.value2];
			}
		} else {
			y = [];
		}
		y.push(x);
		t1 = [x, y];
		$[1] = props.cond;
		$[2] = props.cond2;
		$[3] = props.value;
		$[4] = props.value2;
		$[5] = t1;
	} else {
		t1 = $[5];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		cond: true,
		cond2: true,
		value: 42
	}],
	sequentialRenders: [
		{
			cond: true,
			cond2: true,
			value: 3.14
		},
		{
			cond: true,
			cond2: true,
			value: 42
		},
		{
			cond: true,
			cond2: true,
			value: 3.14
		},
		{
			cond: true,
			cond2: false,
			value2: 3.14
		},
		{
			cond: true,
			cond2: false,
			value2: 42
		},
		{
			cond: true,
			cond2: false,
			value2: 3.14
		},
		{ cond: false },
		{ cond: false }
	]
};
