crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__phi-type-inference-array-push.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/phi-type-inference-array-push.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	let t1;
	if ($[1] !== props.cond || $[2] !== props.value) {
		let y;
		if (props.cond) {
			y = [props.value];
		} else {
			y = [];
		}
		y.push(x);
		t1 = [x, y];
		$[1] = props.cond;
		$[2] = props.value;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		cond: true,
		value: 42
	}],
	sequentialRenders: [
		{
			cond: true,
			value: 3.14
		},
		{
			cond: false,
			value: 3.14
		},
		{
			cond: true,
			value: 42
		}
	]
};
