crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__repro-scope-missing-mutable-range.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/repro-scope-missing-mutable-range.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function HomeDiscoStoreItemTileRating(props) {
	const $ = _c(4);
	const item = useFragment();
	let count;
	if ($[0] !== item?.aggregates) {
		count = 0;
		const aggregates = item?.aggregates || [];
		aggregates.forEach((aggregate) => {
			count = count + (aggregate.count || 0);
		});
		$[0] = item?.aggregates;
		$[1] = count;
	} else {
		count = $[1];
	}
	let t0;
	if ($[2] !== count) {
		t0 = <Text>{count}</Text>;
		$[2] = count;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	return t0;
}
